# arbeitszeugnis

./: .pre-commit-config.yaml  Arbeitszeugnis.ipynb  README.md  app.py  content.py  display_results.py  model_constants.py  prompts.py  pyproject.toml  requirements.txt  response_generation.py  utils.py
src/: app.py  display_results.py  model_constants.py  prompts.py  response_generation.py  utils.py
tests/: test_response_generation.py
