[tool.poetry]
name = "arbeitszeugnis"
version = "0.1.0"
description = ""
authors = ["baniasbaabe <banias@hotmail.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
litellm = "^1.26.13"
google-generativeai = "^0.3.2"
python-dotenv = "^1.0.1"
pymupdf = "^1.23.25"
streamlit = "^1.31.1"
spacy = "^3.7.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pre-commit = "^4.0.1"

[tool.ruff]
extend-include = ["*.ipynb"]
fix = true
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # flake8-bandit
    "S"
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.interrogate]
ignore-init-method = true
fail-under = 50
exclude = ["tests"]

[tool.mypy]
disable_error_code = "import-untyped"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
